--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,94 @@
+<!-- filepath: e:\Android\nitpicker\app\src\main\res\values\strings.xml -->
 <resources>
     <string name="app_name">Nitpicker</string>
+
+    <!-- Common Actions -->
+    <string name="action_back">Back</string>
+    <string name="action_retry">Retry</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_select">Select</string>
+    <string name="action_select_all">Select All</string>
+    <string name="action_move">Move</string>
+    <string name="action_rename">Rename</string>
+    <string name="action_create">Create</string>
+    <string name="action_find">Find</string>
+    <string name="actions">Actions</string> <!-- Generic description -->
+    <string name="more_actions">More Actions</string>
+
+    <!-- Common Labels & Statuses -->
+    <string name="selected_count">%1$d selected</string>
+    <string name="selected_content_description">Selected</string>
+    <string name="error_unknown">Unknown error</string>
+    <string name="loading">Loading…</string>
+    <string name="folder">Folder</string> <!-- Content description -->
+
+    <!-- Home Screen -->
+    <string name="home_title">Nitpicker</string> <!-- App name used as title -->
+    <string name="home_open_drawer">Open Drawer</string>
+    <string name="home_search_placeholder">Search album…</string>
+    <string name="home_search_cd">Search</string>
+    <string name="home_page_info_count">Found %1$d albums</string> <!-- Consider plurals later -->
+    <string name="home_page_info_pages">Page %1$d/%2$d</string>
+    <string name="home_error_title">Error when searching</string>
+    <string name="home_no_results">No results found</string>
+    <string name="home_album_file_count">%1$d files</string> <!-- Consider plurals later -->
+    <string name="home_initial_prompt">Please enter an artist name</string>
+    <string name="home_pagination_previous">←</string>
+    <string name="home_pagination_next">→</string>
+    <string name="home_pagination_ellipsis">…</string>
+
+    <!-- Album Screen -->
+    <string name="album_download_selected">Download selected files</string>
+    <string name="album_open_download_manager">Open Download Manager</string>
+    <string name="album_filter_all">All</string>
+    <string name="album_filter_images">Images</string>
+    <string name="album_filter_other">Other</string>
+    <string name="album_empty_filter">No files match the current filter.</string>
+    <string name="album_empty">No files found in this album.</string>
+    <string name="album_item_queued">Queued for download</string>
+    <string name="album_error_title">Error Loading Files</string>
+
+    <!-- Download Screen -->
+    <string name="download_title">Downloads</string>
+    <string name="download_delete_completed_cancelled">Delete Completed/Cancelled</string>
+    <string name="download_empty">No active or recent downloads.</string>
+    <string name="download_status_completed">Completed</string>
+    <string name="download_status_saved_to">Saved to: %1$s</string>
+    <string name="download_status_error">Error: %1$s</string>
+    <string name="download_status_cancelled">Cancelled</string>
+    <string name="download_status_pending">Pending…</string>
+    <string name="download_status_fetching">Getting download link…</string>
+    <string name="download_status_paused">Paused</string>
+    <string name="download_action_cancel_cd">Cancel</string>
+    <string name="download_action_retry_cd">Retry</string>
+
+    <!-- Files Screen -->
+    <string name="files_title">Files</string>
+    <string name="files_create_folder_cd">Create Folder</string>
+    <string name="files_error_title">Error loading folders</string>
+    <string name="files_empty">No folders found</string>
+    <string name="files_rename_dialog_title">Rename Folder</string>
+    <string name="files_rename_dialog_label">New folder name</string>
+    <string name="files_rename_dialog_invalid">Invalid name</string>
+    <string name="files_delete_dialog_title">Delete Folder</string>
+    <string name="files_delete_dialog_message">Are you sure you want to permanently delete the folder \"%1$s\" and all its contents?</string>
+    <string name="files_create_dialog_title">Create New Folder</string>
+    <string name="files_create_dialog_label">Folder name</string>
+    <string name="files_create_dialog_empty">Name cannot be empty</string>
+
+    <!-- Local Album Screen -->
+    <string name="local_album_default_title">Local Files</string>
+    <string name="local_album_snackbar_no_move_target">No other folders available to move to.</string>
+    <string name="local_album_empty">No images or videos found in this folder.</string>
+    <string name="local_album_snackbar_player_error">Could not open video player.</string>
+    <string name="local_album_snackbar_index_error">Error finding video index.</string>
+    <string name="local_album_snackbar_image_viewer_nyi">Image viewer not implemented yet.</string>
+    <string name="local_album_selection_cancel_cd">Cancel Selection</string>
+    <string name="local_album_delete_dialog_title">Delete Files</string>
+    <string name="local_album_delete_dialog_message">Are you sure you want to permanently delete %1$d selected file(s)? This action cannot be undone.</string> <!-- Consider plurals -->
+    <string name="local_album_move_dialog_title">Move to Folder</string>
+    <string name="local_album_move_dialog_empty">No other folders available.</string>
+    <string name="local_album_error_title">Error Loading Folder</string>
+
 </resources>
